# rs-identity-service

./: .gitignore  Cargo.toml  Makefile  README.md  bacon.toml  envrc
api/: Cargo.toml
api/src/: config.rs  dto.rs  error.rs  lib.rs  validators.rs
api/src/handlers/: auth.rs
api/src/services/: jwt_service.rs  mod.rs  mutations.rs  queries.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251205_123607_create_table_users.rs  m20251205_135715_create_table_auth_methods.rs
models/: Cargo.toml
models/src/: api_keys.rs  auth_methods.rs  lib.rs  prelude.rs  schema_migrations.rs  sea_orm_active_enums.rs  users.rs
scripts/: jwts-keys.sh
src/: config.rs  main.rs
