[package]
name = "identity-service-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1.35"
argon2 = "0.5.3"
chrono = "0.4"
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
models = { path = "../models" }
migration = { path = "../migration" }

[dependencies.sea-orm]
version = "~2.0.0-rc.20"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dependencies.uuid]
version = "1.19.0"
features = [
    "v7",
]

[dev-dependencies]
identity-service-api = { path = ".", features = ["sqlite"] }

[features]
sqlite = ["sea-orm/sqlx-sqlite"]
